# wikitextparser

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  MANIFEST  MANIFEST.in  README  README.md  README.rst  pyproject.toml  pytest.ini  r3l3453.json  setup.cfg  setup.py  test.py  wikitextparser.py
.github/workflows/: tests.yml
dev/: coverage.py  coverage.sh  create_distribution.sh  html_tag_names.py  rm_distribution.sh  twine_upload_dist.sh  upload.py  upload.sh
dev/profiles/: bold_italic.py  bold_italic_input.txt  citation_template.txt  pp_profile.py  table_profile.py  table_profile_input.txt  vs_mwparserfromhell_input.txt  vs_mwpfh.py
docs/: CHANGELOG.rst  Makefile  README.rst  conf.py  index.rst  make.bat
tests/: .coveragerc  __init__.py  __main__.py  test_argument.py  test_cell.py  test_comment.py  test_comment_bold_italic.py  test_config.py  test_externallink.py  test_parameter.py  test_parser_function.py  test_section.py  test_spans.py  test_table.py  test_tag.py  test_tag_attrs.py  test_template.py  test_wikilink.py  test_wikilist.py  test_wikitext.py  test_wikitextparser.py
tests/wikitext/: test_external_links.py  test_get_bolds_and_italics.py  test_get_lists.py  test_get_tags.py  test_pformat.py  test_plain_text.py  test_sections.py  test_tables.py  test_wikitext.py  test_wikitext_plain_text.py
wikitextparser/: __init__.py  _argument.py  _cell.py  _comment.py  _comment_bold_italic.py  _config.py  _externallink.py  _parameter.py  _parser_function.py  _section.py  _spans.py  _table.py  _tag.py  _template.py  _wikilink.py  _wikilist.py  _wikitext.py  argument.py  argument_test.py  cell.py  cell_test.py  comment.py  config_test.py  externallink.py  externallink_test.py  list_parser.py  list_parser_test.py  list_parser_test_ignore.py  parameter.py  parameter_test.py  parser_function.py  parser_function_test.py  section.py  section_test.py  spans.py  spans_test.py  table.py  table_test.py  tag.py  tag_test.py  (+11 more)
