[build-system]
requires = [
    "setuptools>=66.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "wikitextparser"
authors = [
    { name = "5j9", email = "5j9@users.noreply.github.com" },
]
description = "A simple parsing tool for MediaWiki's wikitext markup."
keywords = [
    "MediaWiki",
    "wikitext",
    "parser",
]
readme = "README.rst"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Text Processing",
]
requires-python = ">= 3.7"
dependencies = [
    "regex >= 2022.9.11",
    "wcwidth",
]
dynamic = [
    "version",
]

[project.license]
text = "GNU General Public License v3 (GPLv3)"

[project.urls]
Homepage = "https://github.com/5j9/wikitextparser"

[project.optional-dependencies]
dev = [
    "coverage",
]
tests = [
    "pytest",
]

[tool.setuptools]
zip-safe = true
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "wikitextparser.__version__"

[tool.ruff]
line-length = 79
format.quote-style = 'single'
isort.combine-as-imports = true
extend-select = [
    'I',  # isort
    'UP',  # pyupgrade
]
ignore = [
    'UP027',  # list comprehensions are faster than generator expressions
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'
