[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = "wikitextparser"
authors = [
    { name = "5j9", email = "5j9@users.noreply.github.com" },
]
description = "A simple parsing tool for MediaWiki's wikitext markup."
keywords = [
    "MediaWiki",
    "wikitext",
    "parser",
]
readme = "README.rst"
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Text Processing",
]
requires-python = ">= 3.8"
dependencies = [
    "regex >= 2022.9.11",
    "wcwidth",
]
dynamic = [
    "version",
]

[project.license]
text = "GNU General Public License v3 (GPLv3)"

[project.urls]
Homepage = "https://github.com/5j9/wikitextparser"

[project.optional-dependencies]
dev = [
    "coverage",
]
tests = [
    "pytest",
]

[tool.flit.sdist]
exclude = ['tests/', 'doc/', 'dev/']

[tool.ruff]
line-length = 79
format.quote-style = 'single'
lint.isort.combine-as-imports = true
lint.extend-select = [
    'I',  # isort
    'UP',  # pyupgrade
]
lint.ignore = [
    'UP027',  # list comprehensions are faster than generator expressions
    'E721',  # Do not compare types, use `isinstance()`
]

[tool.pytest.ini_options]
addopts = '--quiet --tb=short'
