[metadata]
name = wikitextparser
version = attr: wikitextparser.__version__
author = 5j9
author_email = 5j9@users.noreply.github.com
license = GNU General Public License v3 (GPLv3)
description = A simple parsing tool for MediaWiki's wikitext markup.
keywords = MediaWiki, wikitext, parser
url = https://github.com/5j9/wikitextparser
long_description = file: README.rst
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Text Processing

[options]
packages = find:
zip_safe = True
install_requires =
    regex<2019.12.17;python_version=="3.5" and platform_system=="Windows"
    regex;python_version!="3.5" or platform_system!="Windows"
    wcwidth
python_requires = >=3.5
tests_require = pytest

[options.extras_require]
dev = path.py; coverage; twine
